--- a/src/check_macro_data.ipynb
+++ b/src/check_macro_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,8 +22,240 @@
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>RPI</th>\n",
+       "      <th>W875RX1</th>\n",
+       "      <th>DPCERA3M086SBEA</th>\n",
+       "      <th>CMRMTSPLx</th>\n",
+       "      <th>RETAILx</th>\n",
+       "      <th>INDPRO</th>\n",
+       "      <th>IPFPNSS</th>\n",
+       "      <th>IPFINAL</th>\n",
+       "      <th>IPCONGD</th>\n",
+       "      <th>IPDCONGD</th>\n",
+       "      <th>...</th>\n",
+       "      <th>CUSR0000SAC</th>\n",
+       "      <th>CUSR0000SAD</th>\n",
+       "      <th>CUSR0000SAS</th>\n",
+       "      <th>CPIULFSL</th>\n",
+       "      <th>CUSR0000SA0L2</th>\n",
+       "      <th>CUSR0000SA0L5</th>\n",
+       "      <th>PCEPI</th>\n",
+       "      <th>DDURRG3M086SBEA</th>\n",
+       "      <th>DNDGRG3M086SBEA</th>\n",
+       "      <th>DSERRG3M086SBEA</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1960-01-01</th>\n",
+       "      <td>0.003194</td>\n",
+       "      <td>0.004638</td>\n",
+       "      <td>0.002788</td>\n",
+       "      <td>0.016956</td>\n",
+       "      <td>0.026606</td>\n",
+       "      <td>0.025914</td>\n",
+       "      <td>0.024097</td>\n",
+       "      <td>0.029021</td>\n",
+       "      <td>0.031237</td>\n",
+       "      <td>0.103831</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.003384</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>-0.003339</td>\n",
+       "      <td>-0.000552</td>\n",
+       "      <td>-0.002136</td>\n",
+       "      <td>-0.001619</td>\n",
+       "      <td>0.000857</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1960-02-01</th>\n",
+       "      <td>0.001143</td>\n",
+       "      <td>0.000917</td>\n",
+       "      <td>0.004335</td>\n",
+       "      <td>0.014371</td>\n",
+       "      <td>0.003696</td>\n",
+       "      <td>-0.008936</td>\n",
+       "      <td>-0.005683</td>\n",
+       "      <td>-0.003441</td>\n",
+       "      <td>-0.011454</td>\n",
+       "      <td>-0.013854</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.002990</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.004211</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.003339</td>\n",
+       "      <td>0.001042</td>\n",
+       "      <td>0.001629</td>\n",
+       "      <td>0.000056</td>\n",
+       "      <td>0.001711</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1960-03-01</th>\n",
+       "      <td>0.001909</td>\n",
+       "      <td>0.000916</td>\n",
+       "      <td>0.014041</td>\n",
+       "      <td>-0.028026</td>\n",
+       "      <td>-0.001102</td>\n",
+       "      <td>-0.009020</td>\n",
+       "      <td>-0.003429</td>\n",
+       "      <td>-0.001145</td>\n",
+       "      <td>0.001151</td>\n",
+       "      <td>-0.019966</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.002990</td>\n",
+       "      <td>-0.002601</td>\n",
+       "      <td>0.004193</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000551</td>\n",
+       "      <td>-0.002926</td>\n",
+       "      <td>0.001841</td>\n",
+       "      <td>0.000598</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1960-04-01</th>\n",
+       "      <td>0.003419</td>\n",
+       "      <td>0.003614</td>\n",
+       "      <td>0.015355</td>\n",
+       "      <td>0.009826</td>\n",
+       "      <td>0.025903</td>\n",
+       "      <td>-0.007958</td>\n",
+       "      <td>0.002289</td>\n",
+       "      <td>0.001145</td>\n",
+       "      <td>0.006879</td>\n",
+       "      <td>-0.001186</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.002981</td>\n",
+       "      <td>-0.002608</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.00321</td>\n",
+       "      <td>0.003328</td>\n",
+       "      <td>0.003665</td>\n",
+       "      <td>0.001193</td>\n",
+       "      <td>0.006280</td>\n",
+       "      <td>0.002049</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1960-05-01</th>\n",
+       "      <td>0.002401</td>\n",
+       "      <td>0.002443</td>\n",
+       "      <td>-0.020343</td>\n",
+       "      <td>-0.031531</td>\n",
+       "      <td>-0.015047</td>\n",
+       "      <td>-0.001144</td>\n",
+       "      <td>0.005690</td>\n",
+       "      <td>0.006866</td>\n",
+       "      <td>0.005699</td>\n",
+       "      <td>0.009453</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-0.002614</td>\n",
+       "      <td>0.004175</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.00320</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.001036</td>\n",
+       "      <td>-0.000105</td>\n",
+       "      <td>-0.000443</td>\n",
+       "      <td>0.002640</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 127 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "(757, 127)"
+       "                 RPI   W875RX1  DPCERA3M086SBEA  CMRMTSPLx   RETAILx  \\\n",
+       "date                                                                   \n",
+       "1960-01-01  0.003194  0.004638         0.002788   0.016956  0.026606   \n",
+       "1960-02-01  0.001143  0.000917         0.004335   0.014371  0.003696   \n",
+       "1960-03-01  0.001909  0.000916         0.014041  -0.028026 -0.001102   \n",
+       "1960-04-01  0.003419  0.003614         0.015355   0.009826  0.025903   \n",
+       "1960-05-01  0.002401  0.002443        -0.020343  -0.031531 -0.015047   \n",
+       "\n",
+       "              INDPRO   IPFPNSS   IPFINAL   IPCONGD  IPDCONGD  ...  \\\n",
+       "date                                                          ...   \n",
+       "1960-01-01  0.025914  0.024097  0.029021  0.031237  0.103831  ...   \n",
+       "1960-02-01 -0.008936 -0.005683 -0.003441 -0.011454 -0.013854  ...   \n",
+       "1960-03-01 -0.009020 -0.003429 -0.001145  0.001151 -0.019966  ...   \n",
+       "1960-04-01 -0.007958  0.002289  0.001145  0.006879 -0.001186  ...   \n",
+       "1960-05-01 -0.001144  0.005690  0.006866  0.005699  0.009453  ...   \n",
+       "\n",
+       "            CUSR0000SAC  CUSR0000SAD  CUSR0000SAS  CPIULFSL  CUSR0000SA0L2  \\\n",
+       "date                                                                         \n",
+       "1960-01-01     0.000000     0.000000     0.000000  0.003384        0.00000   \n",
+       "1960-02-01    -0.002990     0.000000     0.004211  0.000000        0.00000   \n",
+       "1960-03-01     0.002990    -0.002601     0.004193  0.000000        0.00000   \n",
+       "1960-04-01     0.002981    -0.002608     0.000000  0.000000        0.00321   \n",
+       "1960-05-01     0.000000    -0.002614     0.004175  0.000000        0.00320   \n",
+       "\n",
+       "            CUSR0000SA0L5     PCEPI  DDURRG3M086SBEA  DNDGRG3M086SBEA  \\\n",
+       "date                                                                    \n",
+       "1960-01-01      -0.003339 -0.000552        -0.002136        -0.001619   \n",
+       "1960-02-01       0.003339  0.001042         0.001629         0.000056   \n",
+       "1960-03-01       0.000000  0.000551        -0.002926         0.001841   \n",
+       "1960-04-01       0.003328  0.003665         0.001193         0.006280   \n",
+       "1960-05-01       0.000000  0.001036        -0.000105        -0.000443   \n",
+       "\n",
+       "            DSERRG3M086SBEA  \n",
+       "date                         \n",
+       "1960-01-01         0.000857  \n",
+       "1960-02-01         0.001711  \n",
+       "1960-03-01         0.000598  \n",
+       "1960-04-01         0.002049  \n",
+       "1960-05-01         0.002640  \n",
+       "\n",
+       "[5 rows x 127 columns]"
       ]
      },
      "execution_count": 8,
@@ -36,6 +268,26 @@
     "features[\"date\"] = pd.to_datetime(features[\"date\"])\n",
     "features.set_index(\"date\", inplace=True)\n",
     "\n",
+    "features.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(757, 127)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "features.shape"
    ]
   },
