--- a/src/icp_from_scratch.ipynb
+++ b/src/icp_from_scratch.ipynb
@@ -172,14 +172,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Running ICP: 100%|██████████| 2/2 [00:00<00:00, 77.67it/s]"
+      "Running ICP: 100%|██████████| 2/2 [00:00<00:00, 95.26it/s]"
      ]
     },
     {
@@ -209,18 +209,20 @@
     "S_hat = []\n",
     "for comb in tqdm(feature_combs, total=len(feature_combs), desc=\"Running ICP\"):\n",
     "\n",
-    "  # ICP\n",
+    "  # ICP: method 2 described in Peters et al. (2016)\n",
     "  for S in comb:\n",
+    "\n",
+    "    # fit linear regression to all samples but fixed subset of features S\n",
+    "    fit_all_sample_fixed_s = sm.OLS(endog=data[[\"y\"]], exog=data[list(S)]).fit()\n",
+    "\n",
+    "    # compute residuals\n",
+    "    resid = fit_all_sample_fixed_s.resid\n",
+    "    resid_df = data[[\"environment\"]].copy()\n",
+    "    resid_df[\"resid\"] = resid\n",
+    "\n",
     "    all_ttest = []\n",
     "    all_ftest = []\n",
     "    for e in E:\n",
-    "      # fit linear regression to all samples but fixed subset of features S\n",
-    "      fit_all_sample_fixed_s = sm.OLS(endog=data[[\"y\"]], exog=data[list(S)]).fit()\n",
-    "\n",
-    "      # compute residuals\n",
-    "      resid = fit_all_sample_fixed_s.resid\n",
-    "      resid_df = data[[\"environment\"]].copy()\n",
-    "      resid_df[\"resid\"] = resid\n",
     "\n",
     "      # set Ie and Ie-\n",
     "      e_minus = list(set(E) - set([e]))\n",
@@ -234,7 +236,7 @@
     "      all_ttest.append(ttest_pvalue[1])\n",
     "\n",
     "      # f-test\n",
-    "      ## \n",
+    "      ## Assumes: \n",
     "      F = np.var(sample1) / np.var(sample2)\n",
     "      df1 = len(sample1) - 1\n",
     "      df2 = len(sample2) - 1\n",
@@ -247,7 +249,7 @@
     "\n",
     "    s_final_pvalue = np.min([2 * np.min([bonferroni_correction_ftest_pvalue, bonferroni_correction_ttest_pvalue]), 1])\n",
     "\n",
-    "    if s_final_pvalue > alpha:\n",
+    "    if s_final_pvalue >= alpha:\n",
     "      S_hat.append(S)\n",
     "\n",
     "print(\"Chosen features \", S_hat)"
