--- a/src/merge_and_export_etfsmacro.ipynb
+++ b/src/merge_and_export_etfsmacro.ipynb
@@ -852,12 +852,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "# export merged data\n",
-    "merge_transf_df.to_csv(os.path.join(dir_path, \"data\", \"inputs\", \"monthly_ret_etfs_macro.csv\"), index=True)"
+    "merge_transf_df.to_csv(os.path.join(dir_path, \"data\", \"inputs\", \"monthly_ret_etfs_macro_tranfs.csv\"), index=True)"
    ]
   },
   {
