--- a/src/seqICP_VAR_sim.Rmd
+++ b/src/seqICP_VAR_sim.Rmd
@@ -196,7 +196,7 @@ $$
 $$
 x^b_{1,t} = 0.2x^b_{1,t-1} + 0.7x^b_{3,t-1} + N(0, 1)\\ 
 x^b_{2,t} = 0.2x^b_{2,t-1} + N(0, 1)\\ 
-x^b_{3,t} = 0.7x^b_{1,t-1} + 0.2x^a_{2,t-1} + N(0, 5)\\ 
+x^b_{3,t} = 0.7x^b_{1,t-1} + 0.2x^a_{2,t-1} + N(0, 3)\\ 
 $$
 
 Thus, the SCM of $x_{1,t}$ is the same regardless of $e$ but there is a variance shift between the environments caused by a change in distribution in $x_{3,t-1}$.
@@ -239,7 +239,7 @@ for (i in 1:n){
 var_sim_shifted <- cbind(x1, x2, x3)
 ts.plot(var_sim_shifted, type="l", col=c(1, 2, 3))
 ```
-
+Here are the autocorrelation functions of the raw series
 
 ```{r}
 for (i in 1:dim(var_sim_shifted)[2]){
@@ -270,7 +270,7 @@ Ss <- list()
 Sdetails <- list()
 for (vn in varnames){
   X <- var_sim_shifted_df %>% dplyr::select(-one_of(vn))
-  y <- var_sim_df %>% dplyr::select(one_of(vn))
+  y <- var_sim_shifted_df %>% dplyr::select(one_of(vn))
   
   output <- seqICP(X=X, Y=y, model = "ar", stopIfEmpty = FALSE, silent = TRUE, )
   Sdetails[[vn]] <- output
@@ -282,3 +282,107 @@ for (vn in varnames){
 
 
 As we can see, seqICP was not able to identify the invariant set correctly for the variance shifted VAR(1) process.
+
+### Variance Shifted SVAR(1)
+
+We hypothesize that the reason why seqICP was not able to find the correct set of causal parents is because the original DGP must have at least one contemporaneous relationship. This scenario is precisely the context of structural vector autoregressive models (SVAR).
+
+In this context, we will try to artificially introduce a variance shift into the SVAR(1) process we defined before.
+
+To do so, recall that $e \in \{a,b\}$ are two different environments. We define the following DGP for the variance shifted SVAR(1) process:
+
+$$
+x^a_{1,t} = 0.7x^a_{3,t} + N(0, 1)\\ 
+x^a_{2,t} = 0.2x^a_{2,t-1} + N(0, 1)\\ 
+x^a_{3,t} = 0.2x^a_{2,t} + N(0, 1)\\ 
+$$
+
+$$
+x^b_{1,t} = 0.7x^b_{3,t} + N(0, 1)\\ 
+x^b_{2,t} = 0.2x^b_{2,t-1} + N(0, 1)\\ 
+x^b_{3,t} = 0.2x^a_{2,t} + N(0, 3)\\ 
+$$
+
+It can be seen by the above equations that $x_{1,t}$ depends on $x_{3,t}$. Below we simulate from this process:
+
+```{r}
+
+set.seed(1)
+n <- na + nb
+
+x1 <- matrix(data = NA, nrow = n, ncol = 1)
+x2 <- matrix(data = NA, nrow = n, ncol = 1)
+x3 <- matrix(data = NA, nrow = n, ncol = 1)
+
+for (i in 1:n){
+  
+  # initialize all series
+  if (i == 1){
+    x1[i,] <- rnorm(n = 1, mean = 0, sd = 1)
+    x2[i,] <- rnorm(n = 1, mean = 0, sd = 1)
+    x3[i,] <- rnorm(n = 1, mean = 0, sd = 1)
+    next
+  }
+  
+  # sample time series iteratively conditioned on each environment
+  if (i <= na){
+    x2[i,] <- 0.2*x2[i-1,] + rnorm(n = 1, mean = 0, sd = 1)
+    x3[i,] <- 0.2*x2[i,] + rnorm(n = 1, mean = 0, sd = 1)
+    x1[i,] <- 0.7*x3[i,] + rnorm(n = 1, mean = 0, sd = 1)
+  }
+  else{
+    x2[i,] <- 0.2*x2[i-1,] + rnorm(n = 1, mean = 0, sd = 1)
+    x3[i,] <- 0.2*x2[i,] + rnorm(n = 1, mean = 0, sd = 3)
+    x1[i,] <- 0.7*x3[i,] + rnorm(n = 1, mean = 0, sd = 1)
+  }
+  
+}
+
+var_sim_shifted2 <- cbind(x1, x2, x3)
+ts.plot(var_sim_shifted2, type="l", col=c(1, 2, 3))
+```
+
+Here are the autocorrelation functions of the raw series
+
+```{r}
+for (i in 1:dim(var_sim_shifted2)[2]){
+  print(paste0("x", i))
+  ggtsdisplay(var_sim_shifted2[, i])
+}
+```
+
+and the autocorrelation of the square of the series
+
+```{r}
+for (i in 1:dim(var_sim_shifted2)[2]){
+  print(paste0("x", i))
+  ggtsdisplay(var_sim_shifted2[, i]^2)
+}
+```
+
+Finally, we run seqICP on the new dataset:
+
+```{r}
+var_sim_shifted_df2 <- var_sim_shifted2 %>% as.data.table()
+colnames(var_sim_shifted_df2) <- c("x1", "x2", "x3")
+varnames <- colnames(var_sim_shifted_df2)
+
+Ss <- list()
+Sdetails <- list()
+for (vn in varnames){
+  X <- var_sim_shifted_df2 %>% dplyr::select(-one_of(vn))
+  y <- var_sim_shifted_df2 %>% dplyr::select(one_of(vn))
+  
+  output <- seqICP(X=X, Y=y, model = "ar", stopIfEmpty = FALSE, silent = TRUE, )
+  Sdetails[[vn]] <- output
+  
+  print(paste0("Target: ", vn, " Features: ", paste(colnames(X), collapse = " ")))
+  summary(output)
+}
+```
+
+
+
+
+
+
