--- a/src/seqICP_VAR_sim_short.Rmd
+++ b/src/seqICP_VAR_sim_short.Rmd
@@ -79,7 +79,9 @@ var_sim_shifted_df <- var_sim_shifted %>% as.data.table()
 colnames(var_sim_shifted_df) <- c("x1", "x2", "x3")
 varnames <- colnames(var_sim_shifted_df)
 
-write.csv(var_sim_shifted_df, file = file.path(getwd(), "data", "inputs", "gaussian_var_sim1.csv"))
+write.csv(var_sim_shifted_df,
+          file = file.path(getwd(), "data", "inputs", "gaussian_var_sim1.csv"),
+          row.names = FALSE)
 
 Ss <- list()
 Sdetails <- list()
@@ -165,7 +167,9 @@ var_sim_shifted_df2 <- var_sim_shifted2 %>% as.data.table()
 colnames(var_sim_shifted_df2) <- c("x1", "x2", "x3")
 varnames <- colnames(var_sim_shifted_df2)
 
-write.csv(var_sim_shifted_df2, file = file.path(getwd(), "data", "inputs", "gaussian_var_sim2.csv"))
+write.csv(var_sim_shifted_df2,
+          file = file.path(getwd(), "data", "inputs", "gaussian_var_sim2.csv"),
+          row.names = FALSE)
 
 Ss <- list()
 Sdetails <- list()
