--- a/src/VAR_sim_draft.Rmd
+++ b/src/VAR_sim_draft.Rmd
@@ -196,7 +196,7 @@ colnames(var_sim_shifted_df2) <- c("x1", "x2", "x3")
 varnames <- colnames(var_sim_shifted_df2)
 
 write.csv(var_sim_shifted_df2,
-          file = file.path(getwd(), "data", "inputs", "gaussian_var_sim2.csv"),
+          file = file.path(getwd(), "data", "inputs", "gaussian_svar_sim0.csv"),
           row.names = FALSE)
 
 ts.plot(var_sim_shifted2, type="l", col=c(1, 2, 3))
