--- a/src/merge_and_export_etfsmacro.ipynb
+++ b/src/merge_and_export_etfsmacro.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
        "<Axes: xlabel='date'>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
        "<Axes: xlabel='date'>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
        "<Axes: xlabel='date'>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -147,12 +147,12 @@
     "\n",
     "Most of the macroeconomic timeseries are indexes on the original (raw) data. Maybe it will be easier to start with the tranformed (transf) dataset.\n",
     "\n",
-    "We have 28 etfs in total. Since not all of them are available since 2000, we arbitrarily 2010 as the start date. This decision implies that we end up with 28 etfs plus 119 features after merging. Furthremore, we have 152 monthly observations. "
+    "We have 28 etfs in total. Since not all of them are available since 2000, we arbitrarily choose 2010 as the start date. This decision implies that we end up with 28 etfs plus 119 features after merging. Furthremore, we have 152 monthly observations. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +289,7 @@
        "2023-04-03 -0.101472  0.017222  0.033442 -0.003566  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,6 +301,35 @@
   {
    "cell_type": "code",
    "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(280, 36)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mothly_ret_etfs_df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "big_mothly_ret_etfs_df = mothly_ret_etfs_df.dropna(axis=0, how=\"all\").dropna(axis=1, how=\"any\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +562,7 @@
        "[5 rows x 28 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -544,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -777,7 +806,7 @@
        "[5 rows x 155 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -789,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -798,7 +827,7 @@
        "(109, 155)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -809,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -818,7 +847,7 @@
        "<Axes: title={'center': 'SPY vs CPIAUCSL'}, xlabel='Date'>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -857,7 +886,26 @@
    "outputs": [],
    "source": [
     "# export merged data\n",
-    "merge_transf_df.to_csv(os.path.join(dir_path, \"data\", \"inputs\", \"monthly_ret_etfs_macro_tranfs.csv\"), index=True)"
+    "merge_transf_df.to_csv(os.path.join(dir_path, \"data\", \"inputs\", \"monthly_ret_etfs_macro_transf.csv\"), index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "big_merge_transf_df = big_mothly_ret_etfs_df.dropna(axis=0, how=\"all\").dropna(axis=1, how=\"any\").merge(features, left_index=True, right_index=True, how=\"left\").dropna()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export merged data\n",
+    "big_merge_transf_df.to_csv(os.path.join(dir_path, \"data\", \"inputs\", \"big_monthly_ret_etfs_macro_transf.csv\"), index=True)"
    ]
   },
   {
