--- a/src/spy_lasso_rolling_causal_graph.ipynb
+++ b/src/spy_lasso_rolling_causal_graph.ipynb
@@ -568,7 +568,7 @@
     "end = start + start_window\n",
     "\n",
     "parents_of_target = []\n",
-    "for step in tqdm(range(0, len(target_subset_df) - start_window, 1), total=len(target_subset_df) - start_window, desc=\"rolling VAR-LiNGAM\"):\n",
+    "for step in tqdm(range(0, len(target_subset_df) - start_window, 1), total=len(target_subset_df) - start_window, desc=\"rolling LASSO\"):\n",
     "\n",
     "    # select features and time window\n",
     "    selected_columns = list(final_rank_df.iloc[(end + step)].index[(final_rank_df.iloc[(end + step)] == 1)])\n",
